# azufw

./: README.md  dev.bat  dev.sh  pyproject.toml
src/azufw/: __init__.py  __main__.py  app.py  ufw.py
